--- a/HOME.html
+++ b/HOME.html
@@ -26,31 +26,31 @@
 		<a href="ROW/MX.html"><img src="ROW/MX/FLAG.png" height="200"></a>
 
 		</br></br>
-		<a href="ROW/UK.html"><img src="row/UK/FLAG.png" height="200"></a> 
+		<a href="ROW/UK.html"><img src="ROW/UK/FLAG.png" height="200"></a> 
 		<!-- For ease of use, Ireland (republic) is included in this folder -->
 		
-		<a href="ROW/AUS.html"><img src="row/AUS/FLAG.png" height="200"></a>
-		<a href="ROW/NZ.html"><img src="row/NZ/FLAG.png" height="200"></a>
+		<a href="ROW/AUS.html"><img src="ROW/AUS/FLAG.png" height="200"></a>
+		<a href="ROW/NZ.html"><img src="ROW/NZ/FLAG.png" height="200"></a>
 		</br></br>
 	  
-		<a href="ROW/SCAN.html"><img src="row/SCAN/FLAG.png" height="200"></a>
-		<a href="ROW/EU.html"><img src="row/EU/FLAG.png" height="200"></a> 
+		<a href="ROW/SCAN.html"><img src="ROW/SCAN/FLAG.png" height="200"></a>
+		<a href="ROW/EU.html"><img src="ROW/EU/FLAG.png" height="200"></a> 
 		<!-- Contains European continental nations, regardless of membership in the Union -->
 		
-		<a href="ROW/RU.html"><img src="row/RU/FLAG.png" height="200"></a>
+		<a href="ROW/RU.html"><img src="ROW/RU/FLAG.png" height="200"></a>
 		</br></br>
 		
-		<a href="ROW/CN.html"><img src="row/CN/FLAG.png" height="200"></a>
-		<a href="ROW/CN/HK.html"><img src="row/CN/HK/FLAG.png" height="200"></a>
+		<a href="ROW/CN.html"><img src="ROW/CN/FLAG.png" height="200"></a>
+		<a href="ROW/CN/HK.html"><img src="ROW/CN/HK/FLAG.png" height="200"></a>
 		<!-- Being a china subfolder is cringe but made sense at one point -->
 		
-		<a href="ROW/JP.html"><img src="row/JP/FLAG.png" height="200"></a>
-		<a href="ROW/KR.html"><img src="row/KR/FLAG.png" height="200"></a>
+		<a href="ROW/JP.html"><img src="ROW/JP/FLAG.png" height="200"></a>
+		<a href="ROW/KR.html"><img src="ROW/KR/FLAG.png" height="200"></a>
 		</br></br>
 		
-		<a href="ROW/ZA.html"><img src="row/ZA/FLAG.png" height="200"></a>
-		<a href="ROW/AE.html"><img src="row/AE/FLAG.png" height="200"></a>
-		<a href="ROW/KSA.html"><img src="row/KSA/FLAG.png" height="200"></a>
+		<a href="ROW/ZA.html"><img src="ROW/ZA/FLAG.png" height="200"></a>
+		<a href="ROW/AE.html"><img src="ROW/AE/FLAG.png" height="200"></a>
+		<a href="ROW/KSA.html"><img src="ROW/KSA/FLAG.png" height="200"></a>
 	  
 	  
 	  </br></br>
