--- a/CAN/Provinces/ON-2.html
+++ b/CAN/Provinces/ON-2.html
@@ -91,19 +91,19 @@
 		<div class="column">
 			<a href="ON/Toronto.html"><img src="ON/Toronto/LOGO2W.png" height="200"><br><!-- <br>City of Toronto --></a></br>
 			<div class="column8">
-				<!-- <a href="ON/Toronto/TPS"> --><img src="ON/Toronto/TPS/Badge.png" height="100"><br>Toronto Police Service</a><br></br>
+				<!-- <a href="ON/Toronto/TPS"> --><img src="ON/Toronto/TPS/BADGE.png" height="100"><br>Toronto Police Service</a><br></br>
 			</div>
 			<div class="column8">
-				<!-- <a href="ON/Toronto/TFS">--> <img src="ON/Toronto/TFS/Badge.png" height="100"><br>Toronto Fire Service</a><br></br>
+				<!-- <a href="ON/Toronto/TFS">--> <img src="ON/Toronto/TFS/BADGE.png" height="100"><br>Toronto Fire Service</a><br></br>
 			</div>
 			<div class="column8">
-				<!-- <a href="ON/Toronto/TAS"> --><img src="ON/Toronto/TAS/Badge2.png" height="100"><br>Toronto Ambulance Service</a><br></br>
+				<!-- <a href="ON/Toronto/TAS"> --><img src="ON/Toronto/TAS/BADGE2.png" height="100"><br>Toronto Ambulance Service</a><br></br>
 			</div>
 			<div class="column8">
 				<img src="../Transport/Transit/TTC/BADGE.png" height="100"><br>Toronto Transit Commission Special Constables</a><br></br>
 			</div>
 			<div class="column8">
-					<img src="../Transport/Air/YYZ/FES/Badge2.png" height="100"><br>Toronto Pearson<br>International Airport<br></br>
+					<img src="../Transport/Air/YYZ/FES/BADGE2.png" height="100"><br>Toronto Pearson<br>International Airport<br></br>
 			</div>
 			<div class="column8">
 				<img src="ON/Toronto/UofT1.png" height="100"><br>University of Toronto Special Constables</a><br></br>
@@ -116,13 +116,13 @@
 		 <div class="column">
 			<img src="ON/Ottawa/LOGO.png" height="200"><br><!-- <br>City of Ottawa --></a></br>
 			<div class="column5">
-				<img src="ON/Ottawa/Police/Badge.png" height="100"><br>Ottawa Police</a><br></br>
+				<img src="ON/Ottawa/Police/BADGE.png" height="100"><br>Ottawa Police</a><br></br>
 			</div>
 			<div class="column5">
-				<img src="ON/Ottawa/Fire/Badge.png" height="100"><br>Ottawa Fire-Incendie</a><br></br>
+				<img src="ON/Ottawa/Fire/BADGE.png" height="100"><br>Ottawa Fire-Incendie</a><br></br>
 			</div>
 			<div class="column5">
-				<img src="ON/Ottawa/EMS/Badge2.png" height="100"><br>Ottawa EMS</a><br></br>
+				<img src="ON/Ottawa/EMS/BADGE2.png" height="100"><br>Ottawa EMS</a><br></br>
 			</div>
 			<div class="column5">
 				<img src="../Transport/Transit/OC/BADGE.png" height="100"><br>OC Transpo Special Constables</a><br></br>
@@ -134,16 +134,16 @@
 		<div class="column">
 			<!-- <a href="ON/Hamilton"> --><img src="ON/Hamilton/LOGO2.png" height="200"><br><!-- <br>City of Hamilton --></a></br>
 			<div class="column5">
-				<!-- <a href="ON/Hamilton/Police"> --><img src="ON/Hamilton/Police/Badge.png" height="100"><br>Hamilton Police</a><br></br>
+				<!-- <a href="ON/Hamilton/Police"> --><img src="ON/Hamilton/Police/BADGE.png" height="100"><br>Hamilton Police</a><br></br>
 			</div>
 			<div class="column5">
-				<!-- <a href="ON/Hamilton/Fire"> --><img src="ON/Hamilton/Fire/Badge2.png" height="100"><br>Hamilton Fire</a><br></br>
+				<!-- <a href="ON/Hamilton/Fire"> --><img src="ON/Hamilton/Fire/BADGE2.png" height="100"><br>Hamilton Fire</a><br></br>
 			</div>
 			<div class="column5">
-				<!-- <a href="ON/Hamilton/EMS"> --><img src="ON/Hamilton/EMS/Badge.png" height="100"><br>Hamilton EMS</a><br></br>
+				<!-- <a href="ON/Hamilton/EMS"> --><img src="ON/Hamilton/EMS/BADGE.png" height="100"><br>Hamilton EMS</a><br></br>
 			</div>
 			<div class="column5">
-				<img src="../Transport/Air/YHM/Badge.png" height="100"><br>Hamilton Airport</a><br></br>
+				<img src="../Transport/Air/YHM/BADGE.png" height="100"><br>Hamilton Airport</a><br></br>
 			</div>
 			<div class="column5">
 				<img src="ON/Hamilton/McMaster.png" height="100"><br>McMaster University Special Constables</a><br></br>
@@ -156,13 +156,13 @@
 		 <div class="column4">
 			<a href="ON/Peel.html"><img src="ON/Peel/FLAG1.png" height="200"><!-- <br>Peel Region --></a><br>
 				<div class="column4">
-					<img src="ON/Peel/PRP/Badge.png" height="100"><br>Peel Regional Police<br></br>
+					<img src="ON/Peel/PRP/BADGE.png" height="100"><br>Peel Regional Police<br></br>
 				</div>
 				<div class="column4">
-					<img src="ON/Peel/PRAS/Badge.png" height="100"><br>Peel Regional EMS<br></br>
+					<img src="ON/Peel/PRAS/BADGE.png" height="100"><br>Peel Regional EMS<br></br>
 				</div>
 				<div class="column4">
-					<img src="../Transport/Air/YYZ/FES/Badge2.png" height="100"><br>Toronto Pearson<br>International Airport<br></br>
+					<img src="../Transport/Air/YYZ/FES/BADGE2.png" height="100"><br>Toronto Pearson<br>International Airport<br></br>
 				</div>
 				<div class="column4">
 					<img src="ON/Peel/Fire/MissBADGE.png" height="50"><br>Mississauga Fire</br>
@@ -173,10 +173,10 @@
 		<div class="column4">
 			<a href="ON/York.html"><img src="ON/York/FLAG2.png" height="200"><!-- <br>York Region --></a><br>
 				<div class="column4">
-					<img src="ON/York/YRP/Badge.png" height="100"><br>York Regional Police</a><br></br>
+					<img src="ON/York/YRP/BADGE.png" height="100"><br>York Regional Police</a><br></br>
 				</div>
 				<div class="column4">
-					<img src="ON/York/EMS/Badge.png" height="100"><br>York Regional Paramedics</a><br></br>
+					<img src="ON/York/EMS/BADGE.png" height="100"><br>York Regional Paramedics</a><br></br>
 				</div>
 				<div class="column4">
 					<img src="../Transport/Transit/YRT/BADGE.png" height="100"><br>York Regional Transit Special Constables</a><br></br>
@@ -189,24 +189,24 @@
 		<div class="column4">
 			<!-- <a href="ON/Durham"> --><img src="ON/Durham/LOGO.png" height="200"><!-- <br>Durham Region --></a><br>
 				<div class="column2">
-					<img src="ON/Durham/Police/Badge.png" height="100"><br>Durham Regional Police<br></br>
+					<img src="ON/Durham/Police/BADGE.png" height="100"><br>Durham Regional Police<br></br>
 				</div>
 				<div class="column2">
-					<img src="ON/Durham/EMS/Badge.png" height="100"><br>Durham Region EMS<br></br>
+					<img src="ON/Durham/EMS/BADGE.png" height="100"><br>Durham Region EMS<br></br>
 				</div>
 		</div>
 	
 		<div class="column4">
 			<a href="ON/Halton.html"><img src="ON/Halton/FLAG.png" height="200"><!-- <br>Halton Region --></a><br>
 				<div class="column">
-					<img src="ON/Halton/HRPS/Badge.png" height="100"><br>Halton Region Police</a><br></br>
+					<img src="ON/Halton/HRPS/BADGE.png" height="100"><br>Halton Region Police</a><br></br>
 				</div>
 				<div class="column">
-					<img src="ON/Halton/EMS/Badge.png" height="100"><br>Halton Region EMS</a><br></br>
+					<img src="ON/Halton/EMS/BADGE.png" height="100"><br>Halton Region EMS</a><br></br>
 				</div>
 				<div class="column">
-					<img src="ON/Halton/Fire/OFD/Badge.png" height="50"><br>Oakville Fire</br>
-					<img src="ON/Halton/Fire/BFD/Badge.png" height="50"><br>Burlington Fire</br>
+					<img src="ON/Halton/Fire/OFD/BADGE.png" height="50"><br>Oakville Fire</br>
+					<img src="ON/Halton/Fire/BFD/BADGE.png" height="50"><br>Burlington Fire</br>
 					<img src="ON/Halton/Fire/Milton.png" height="50"><br>Milton Fire</br>
 				</div>
 		</div>
@@ -218,10 +218,10 @@
 		<div class="column">
 			<img src="ON/Waterloo/LOGO.png" height="200"><!-- <br>Waterloo Region --><br>
 				<div class="column4">
-					<img src="ON/Waterloo/Police/Badge.png" height="100"><br>Waterloo Region Police</br>
+					<img src="ON/Waterloo/Police/BADGE.png" height="100"><br>Waterloo Region Police</br>
 				</div>
 				<div class="column4">
-					<img src="ON/Waterloo/EMS/Badge.png" height="100"><br>Waterloo Region EMS</br>
+					<img src="ON/Waterloo/EMS/BADGE.png" height="100"><br>Waterloo Region EMS</br>
 				</div>
 				<div class="column4">
 					<img src="ON/Waterloo/Fire.png" height="100"><br>Waterloo Fire</br>
@@ -234,13 +234,13 @@
 		<div class="column">
 			<img src="ON/Niagara/Logo.png" height="200"><!-- <br>Niagara Region --><br>
 			<div class="column">
-				<img src="ON/Niagara/Police/Badge.png" height="100"><br>Niagara Region Police</br>
+				<img src="ON/Niagara/Police/BADGE.png" height="100"><br>Niagara Region Police</br>
 			</div>
 			<div class="column">
-				<img src="ON/Niagara/EMS/Badge.png" height="100"><br>Niagara Region EMS</br>
+				<img src="ON/Niagara/EMS/BADGE.png" height="100"><br>Niagara Region EMS</br>
 			</div>
 			<div class="column">
-				<img src="ON/Niagara/Parks Police/Badge.png" height="100"><br>Niagara Parks Police</br>
+				<img src="ON/Niagara/Parks Police/BADGE.png" height="100"><br>Niagara Parks Police</br>
 			</div>
 		</div>
 	
