--- a/ROW/AUS-2.html
+++ b/ROW/AUS-2.html
@@ -16,39 +16,39 @@
 		<div class="column">
 			<a href="AUS/NSW.html"><img src="AUS/NSW/FLAG.png" height="200"><br>New South Wales</a><br>
 				<div class="column">
-					<img src="AUS/NSW/Police/Badge.png" height="100"></br>
+					<img src="AUS/NSW/Police/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/NSW/Fire/Badge.png" height="100"></br>
+					<img src="AUS/NSW/Fire/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/NSW/Ambo/Badge.png" height="100"></br>
+					<img src="AUS/NSW/Ambo/BADGE.png" height="100"></br>
 				</div>
 		</div>
 		
 		<div class="column">
 			<a href="AUS/VIC.html"><img src="AUS/VIC/FLAG.png" height="200"><br>Victoria</a><br>
 				<div class="column">
-					<img src="AUS/VIC/Police/Badge.png" height="100"></br>
+					<img src="AUS/VIC/Police/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/VIC/Fire/Badge.png" height="100"></br>
+					<img src="AUS/VIC/Fire/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/VIC/Ambo/Badge.png" height="100"></br>
+					<img src="AUS/VIC/Ambo/BADGE.png" height="100"></br>
 				</div>
 		</div>
 		
 		<div class="column">
 			<a href="AUS/QLD.html"><img src="AUS/QLD/FLAG.png" height="200"><br>Queensland</a><br>
 				<div class="column">
-					<img src="AUS/QLD/Police/Badge.png" height="100"></br>
+					<img src="AUS/QLD/Police/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/QLD/Fire/Badge.png" height="100"></br>
+					<img src="AUS/QLD/Fire/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/QLD/Ambo/Badge.png" height="100"></br>
+					<img src="AUS/QLD/Ambo/BADGE.png" height="100"></br>
 				</div>
 		</div>
 	</div></br>
@@ -57,23 +57,23 @@
 		<div class="column">
 			<a href="AUS/SA.html"><img src="AUS/SA/FLAG.png" height="200"><br>South Australia</a><br>
 				<div class="column">
-					<img src="AUS/SA/Police/Badge.png" height="100"></br>
+					<img src="AUS/SA/Police/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/SA/Fire/Badge.png" height="100"></br>
+					<img src="AUS/SA/Fire/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/SA/Ambo/Badge.png" height="100"></br>
+					<img src="AUS/SA/Ambo/BADGE.png" height="100"></br>
 				</div>
 		</div>
 		
 		<div class="column">
 			<a href="AUS/WA.html"><img src="AUS/WA/FLAG.png" height="200"><br>Western Australia</a><br>
 				<div class="column">
-					<img src="AUS/WA/Police/Badge.png" height="100"></br>
+					<img src="AUS/WA/Police/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/WA/Fire/Badge.png" height="100"></br>
+					<img src="AUS/WA/Fire/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
 					<img src="AUS/SJABadge.png" height="100"></br>
@@ -83,13 +83,13 @@
 		<div class="column">
 			<a href="AUS/TAS.html"><img src="AUS/TAS/FLAG.png" height="200"><br>Tasmania</a><br>
 				<div class="column">
-					<img src="AUS/TAS/Police/Badge.png" height="100"></br>
+					<img src="AUS/TAS/Police/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/TAS/Fire/Badge.png" height="100"></br>
+					<img src="AUS/TAS/Fire/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/TAS/Ambo/Badge.png" height="100"></br>
+					<img src="AUS/TAS/Ambo/BADGE.png" height="100"></br>
 				</div>
 		</div>
 	</div></br>
@@ -98,13 +98,13 @@
 		<div class="column">
 			<a href="AUS/ACT.html"><img src="AUS/ACT/FLAG.png" height="200"><br>Australian Capitol Territory</a><br>
 				<div class="column">
-					<img src="AUS/ACT/AFP/Badge.png" height="100"></br>
+					<img src="AUS/ACT/AFP/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/ACT/Fire/Badge.png" height="100"></br>
+					<img src="AUS/ACT/Fire/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/ACT/Ambo/Badge.png" height="100"></br>
+					<img src="AUS/ACT/Ambo/BADGE.png" height="100"></br>
 				</div>
 			</div>
 		
@@ -137,10 +137,10 @@
 		<div class="column">
 			<a href="AUS/NT.html"><img src="AUS/NT/FLAG.png" height="200"><br>Northern Territory</a><br>
 				<div class="column">
-					<img src="AUS/NT/Police/Badge.png" height="100"></br>
+					<img src="AUS/NT/Police/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
-					<img src="AUS/NT/Fire/Badge.png" height="100"></br>
+					<img src="AUS/NT/Fire/BADGE.png" height="100"></br>
 				</div>
 				<div class="column">
 					<img src="AUS/SJABadge.png" height="100"></br>
