--- a/USA/State/CA.html
+++ b/USA/State/CA.html
@@ -225,7 +225,7 @@
 		<div class="column4">
 			<img src="CA/Kern/SEAL.png" height="200"><br>Kern County</br>
 			<div class="column">
-				<img src="CA/Kern/Sheriff/Badge.png" height="80"><br>Kern County Sheriff's Office<br><br>
+				<img src="CA/Kern/Sheriff/BADGE.png" height="80"><br>Kern County Sheriff's Office<br><br>
 			</div>
 			<div class="column">
 				<img src="CA/Kern/Fire.png" height="80"><br>Kern County Fire<br><br>
