--- a/CAN/Provinces/ON.html
+++ b/CAN/Provinces/ON.html
@@ -81,39 +81,39 @@
 		<div class="column">
 			<a href="ON/Toronto.html"><img src="ON/Toronto/LOGO2W.png" height="200"></a><br><br>
 			<div class="column">
-				<img src="ON/Toronto/TPS/Badge.png" height="100"></a><br><br>
+				<img src="ON/Toronto/TPS/BADGE.png" height="100"></a><br><br>
 			</div>
 			<div class="column">
-				<img src="ON/Toronto/TFS/Badge.png" height="100"></a><br><br>
+				<img src="ON/Toronto/TFS/BADGE.png" height="100"></a><br><br>
 			</div>
 			<div class="column">
-				<img src="ON/Toronto/TAS/Badge2.png" height="100"></a><br><br>
+				<img src="ON/Toronto/TAS/BADGE2.png" height="100"></a><br><br>
 			</div>
 		</div> 		
 	
 		 <div class="column">
 			<!-- <a href="ON/Ottawa.html"> --><img src="ON/Ottawa/LOGO.png" height="200"></a><br><br>
 			<div class="column">
-				<img src="ON/Ottawa/Police/Badge.png" height="100"></a><br><br>
+				<img src="ON/Ottawa/Police/BADGE.png" height="100"></a><br><br>
 			</div>
 			<div class="column">
-				<img src="ON/Ottawa/Fire/Badge.png" height="100"></a><br><br>
+				<img src="ON/Ottawa/Fire/BADGE.png" height="100"></a><br><br>
 			</div>
 			<div class="column">
-				<img src="ON/Ottawa/EMS/Badge2.png" height="100"></a><br><br>
+				<img src="ON/Ottawa/EMS/BADGE2.png" height="100"></a><br><br>
 			</div>
 		 </div>
 		 
 		<div class="column">
 			<!-- <a href="ON/Hamilton"> --><img src="ON/Hamilton/LOGO2.png" height="200"></a><br><br>
 			<div class="column">
-				<img src="ON/Hamilton/Police/Badge.png" height="100"></a><br><br>
+				<img src="ON/Hamilton/Police/BADGE.png" height="100"></a><br><br>
 			</div>
 			<div class="column">
-				<img src="ON/Hamilton/Fire/Badge2.png" height="100"></a><br><br>
+				<img src="ON/Hamilton/Fire/BADGE2.png" height="100"></a><br><br>
 			</div>
 			<div class="column">
-				<img src="ON/Hamilton/EMS/Badge.png" height="100"></a><br><br>
+				<img src="ON/Hamilton/EMS/BADGE.png" height="100"></a><br><br>
 			</div>
 		</div>
 		
@@ -121,30 +121,30 @@
 		 <div class="column4">
 			<a href="ON/Peel.html"><img src="ON/Peel/FLAG1.png" height="200"></a><br><br>
 				<div class="column2">
-					<img src="ON/Peel/PRP/Badge.png" height="100"></a><br><br>
+					<img src="ON/Peel/PRP/BADGE.png" height="100"></a><br><br>
 				</div>
 				<div class="column2">
-					<img src="ON/Peel/PRAS/Badge.png" height="100"></a><br><br>
+					<img src="ON/Peel/PRAS/BADGE.png" height="100"></a><br><br>
 				</div>
 		</div> 
 		
 		<div class="column4">
 			<a href="ON/York.html"><img src="ON/York/FLAG2.png" height="200"></a><br><br>
 				<div class="column2">
-					<img src="ON/York/YRP/Badge.png" height="100"></a><br><br>
+					<img src="ON/York/YRP/BADGE.png" height="100"></a><br><br>
 				</div>
 				<div class="column2">
-					<img src="ON/York/EMS/Badge.png" height="100"></a><br><br>
+					<img src="ON/York/EMS/BADGE.png" height="100"></a><br><br>
 				</div>
 		 </div>	
 
 		<div class="column4">
 			<!-- <a href="ON/Durham"> --><img src="ON/Durham/LOGO.png" height="200"></a><br><br>
 				<div class="column2">
-					<img src="ON/Durham/Police/Badge.png" height="100"></a><br><br>
+					<img src="ON/Durham/Police/BADGE.png" height="100"></a><br><br>
 				</div>
 				<div class="column2">
-					<img src="ON/Durham/EMS/Badge.png" height="100"></a><br><br>
+					<img src="ON/Durham/EMS/BADGE.png" height="100"></a><br><br>
 				</div>
 		</div>
 	
@@ -153,30 +153,30 @@
 		<div class="column4">
 			<a href="ON/Halton.html"><img src="ON/Halton/FLAG.png" height="200"></a><br><br>
 				<div class="column2">
-					<img src="ON/Halton/HRPS/Badge.png" height="100"></a><br><br>
+					<img src="ON/Halton/HRPS/BADGE.png" height="100"></a><br><br>
 				</div>
 				<div class="column2">
-					<img src="ON/Halton/EMS/Badge.png" height="100"></a><br><br>
+					<img src="ON/Halton/EMS/BADGE.png" height="100"></a><br><br>
 				</div>
 		</div>
 	
 		<div class="column">
 			<!-- <a href="ON/Waterloo"> --><img src="ON/Waterloo/LOGO.png" height="200"></a><br><br>
 				<div class="column2">
-					<img src="ON/Waterloo/Police/Badge.png" height="100"></a><br><br>
+					<img src="ON/Waterloo/Police/BADGE.png" height="100"></a><br><br>
 				</div>
 				<div class="column2">
-					<img src="ON/Waterloo/EMS/Badge.png" height="100"></a><br><br>
+					<img src="ON/Waterloo/EMS/BADGE.png" height="100"></a><br><br>
 				</div>
 		</div>
 	
 		<div class="column">
 			<!-- <a href="ON/Niagara"> --><img src="ON/Niagara/Logo.png" height="200"></a><br><br>
 			<div class="column2">
-					<img src="ON/Niagara/Police/Badge.png" height="100"></a><br><br>
+					<img src="ON/Niagara/Police/BADGE.png" height="100"></a><br><br>
 			</div>
 			<div class="column2">
-					<img src="ON/Niagara/EMS/Badge.png" height="100"></a><br><br>
+					<img src="ON/Niagara/EMS/BADGE.png" height="100"></a><br><br>
 			</div>
 		</div>
 	
