--- a/HOME.html
+++ b/HOME.html
@@ -54,6 +54,8 @@
 	  
 	  
 	  </br></br>
+
+	<a href="ROW/MIL.html"><img src="ROW/CAMO.png" height="200"></a>
 	  
 	  <!-- <div class="row">-->
 		<!-- <div class="column"> -->
