--- a/HOME.html
+++ b/HOME.html
@@ -55,7 +55,7 @@
 	  
 	  </br></br>
 
-	<a href="ROW/MIL.html"><img src="ROW/CAMO.png" height="200"></a>
+	<a href="ROW/MIL.html"><img src="ROW/CAMO.jpg" height="200"></a>
 	  
 	  <!-- <div class="row">-->
 		<!-- <div class="column"> -->
