--- a/ROW/UK.html
+++ b/ROW/UK.html
@@ -32,7 +32,33 @@
 			
 			<div class="column2">
 				<a href="UK/WLS.html"><img src="UK/WLS/FLAG.png" height="200"><br>Wales</br><i>Cymru</i></a><br></br>
-			</div>
+
+        <div class="row">
+                <div class="column4">
+                        <img src="UK/WLS/North/BADGEb.png" height="100"></br>
+                </div>
+                <div class="column4">
+                        <img src="UK/WLS/Gwent/BADGEb.png" height="100"></br>
+                </div>
+                <div class="column4">
+                        <img src="UK/WLS/DP/BADGEb.png" height="100"></br>
+                </div>
+                <div class="column4">
+                        <img src="UK/WLS/South/BADGE2.png" height="100"></br>
+                </div>
+        </div>
+        <div class="row">
+                <div class="column4">
+                        <img src="UK/WLS/Fire/NBADGE.png" height="100"></br>
+                </div>
+                <div class="column2">
+                        <img src="UK/WLS/Fire/WBADGE.png" height="100"></br>
+                </div>
+                <div class="column4">
+                        <img src="UK/WLS/Fire/SBADGE.png" height="100"></br>
+                </div>
+        </div>
+		</div>
 		
 			<div class="column2">
 				<a href="UK/NIR.html"><img src="UK/NIR/FLAG.png" height="200"><br>Northern Ireland</br><i>Tuaisceart Éireann</i></a><br></br>
