--- a/USA/FED/dhs.html
+++ b/USA/FED/dhs.html
@@ -81,15 +81,18 @@
 		 
 		<div class="column4">
 			<img src="DHS/FPS/BADGE.png" height="300"><br>Federal Protective Service</a></br>
-				<div class="column0">
+				<!-- <div class="column0"> -->
 					<div class="dhsheader">
 						<a href="DHS/FPS.html"><img src="DHS/FPS/MBADGE.png" height="150"></a>
 					</div>
-				</div>
+				<!-- </div> -->
 		 </div>
 		
 		<div class="column4">
-			<img src="DHS/FEMA/BADGE.png" height="300"><br>Federal Emergency Management Agency</a><br>
+			<a href="DHS/FEMA-Task.html"><img src="DHS/FEMA/BADGE.png" height="300"><br>Federal Emergency Management Agency<br>
+				<!-- <div class="column0"> -->
+					<img src="DHS/FEMA/FEMA-USAR.png" height="150"></a>
+				<!-- </div> -->
 		</div>
 		
 		<div class="column4">
