--- a/USA/State/AK.html
+++ b/USA/State/AK.html
@@ -27,22 +27,35 @@
 		<div class="row">
 
 			<div class="column2">
-				<a href="!Trooper/AST.html"><img src="!Trooper/AST/!BADGE.png" height="200"><br>Alaska State Troopers</a><br><br>
+				<a href="!Trooper/AST.html"><img src="!Trooper/AST/!BADGE.png" height="200"><br>Alaska State Troopers</a></br>
 			</div>
 			
 			<div class="column2">
-				<img src="!Environment/AK/MBADGE.png" height="200"><br>Alaska Department of Environmental Conservation<br><br>
+				<img src="!Environment/AK/LOGO.png" height="150"><br>Alaska Department of Environmental Conservation</br>
+				<div class="column0">
+				<img src="!Environment/AK/MBADGE.png" height="80"><br>Alaska Department of Environmental Conservation</br>
+				</div>
 			</div>
 			
 		</div>
 		<div class="row">
 		
 			<div class="column2">
-				<img src="!Wildlife/AK/WBADGE.png" height="200"><br>Alaska Department of Fish & Game<br><br>
+				<img src="!Wildlife/AK/WBADGE.png" height="200"><br>Alaska Department of Fish & Game</br>
 			</div>
 			
 			<div class="column2">
-				<img src="!Corrections/AK/BADGE.png" height="200"><br>Alaska Department of Corrections<br><br>
+				<img src="!Parks/AK/LOGO.png" height="150"><br>Alaska Department of Fish & Game</br>
+				<div class="column0">
+					<img src="!Parks/AK/BADGE2.png" height="80"><br>Alaska Department of Fish & Game</br>
+				</div>
+			</div>
+			
+		</div>
+		<div class="row">
+			
+			<div class="column2">
+				<img src="!Corrections/AK/BADGE.png" height="200"><br>Alaska Department of Corrections</br>
 			</div>
 		
 		</div>
@@ -59,51 +72,74 @@
 			</div>
 			
 			<div class="column2">
-				<img src="AK/Fairbanks/Airport.png" height="200"><br>Fairbanks Airport<br><br>
+				<img src="AK/Fairbanks/Airport.png" height="200"><br>Fairbanks Airport</br>
 			</div>
 		
 		</div>
 		<div class="row">
 		
 			<div class="column2">
-				<img src="AK/UAAnchorage.png" height="200"><br>University of Alaska - Anchorage<br><br>
+				<img src="AK/UAAnchorage.png" height="200"><br>University of Alaska - Anchorage</br>
 			</div>
 			
 			<div class="column2">
-				<img src="AK/UAFairbanks.png" height="200"><br>University of Alaska - Fairbanks<br><br>
+				<img src="AK/UAFairbanks.png" height="200"><br>University of Alaska - Fairbanks</br>
 			</div>
 		
 		</div>		
 		<div class="row">
 		
 			<div class="column0">
-				<img src="AK/VPSO.png" height="200"><br>Village Public Safety Officers<br><br>
+				<img src="AK/VPSO.png" height="200"><br>Village Public Safety Officers</br>
 			</div>
 		
 		</div>
 	</div>
-	<div class="column23">	
+	<div class="column23">
+	<div class="row">
 	
 		<div class="column">
-			<img src="AK/Anchorage/BADGE.png" height="200"><br>Anchorage Police<br><br>
+			<img src="AK/Anchorage/SEAL.png" height="150"><br>Municipality of Anchorage</br>
+			<div class="column2">
+				<img src="AK/Anchorage/BADGE.png" height="80"><br>Anchorage Police</br>
+			</div>
+			<div class="column2">
+				<img src="AK/Anchorage/Fire.png" height="80"><br>Anchorage Fire</br>
+			</div>
 		</div>
 		
 		<div class="column">
-			<img src="AK/Fairbanks/BADGE.png" height="200"><br>Fairbanks Police<br><br>
+			<img src="AK/Fairbanks/SEAL.png" height="150"><br>City of Fairbanks</br>
+			<div class="column0">
+				<img src="AK/Fairbanks/BADGE.png" height="80"><br>Fairbanks Police</br>
+			</div>
 		</div>
 		
 		<div class="column">
-			<img src="AK/Juneau.png" height="200"><br>Juneau Police<br><br>
+			<img src="AK/Juneau/SEAL.png" height="150"><br>City & Bureau of Juneau</br>
+			<div class="column0">
+				<img src="AK/Juneau/BADGE.png" height="80"><br>Juneau Police</br>
+			</div>
+		</div>
+	
+	</div>
+	<div class="row">
+	
+		<div class="column">
+			<img src="AK/Sitka/SEAL.png" height="150"><br>City & Bureau of Sitka</br>
+			<div class="column0">
+				<img src="AK/Sitka/BADGE.png" height="80"><br>Sitka Police</br>
+			</div>
 		</div>
 		
 		<div class="column">
-			<img src="AK/Sitka.png" height="200"><br>Sitka Police<br><br>
+			<img src="AK/Kodiak/SEAL.png" height="150"><br>City of Kodiak</br>
+			<div class="column0">
+				<img src="AK/Kodiak/BADGE.png" height="80"><br>Kodiak Police</br>
+			</div>
 		</div>
 		
-		<div class="column">
-			<img src="AK/Kodiak.png" height="200"><br>Kodiak Police<br><br>
-		</div>
-		
+	</div>
 	</div>
 
 </body>
