--- a/USA/State/AZ.html
+++ b/USA/State/AZ.html
@@ -61,6 +61,20 @@
 		
 		
 	</div>
+	
+	<div class="row">
+		<div class="column">
+			<img src="AZ/Uni/UA.png" height="200"><br>University of Arizona Police<br>
+		</div>
+		<div class="column">
+			<img src="AZ/Uni/ASUM.png" height="200"><br>Arizona State University Police<br>
+		</div>
+		<div class="column">
+			<img src="AZ/Uni/NAU.png" height="200"><br>Northern Arizona UniversityPolice<br>
+		</div>
+		
+		
+	</div>
 	</div>
 
 	<div class="column23">
