--- a/USA/State/NY/NYC.html
+++ b/USA/State/NY/NYC.html
@@ -19,25 +19,49 @@
 			<a href="NYC/NYPD.html"><img src="NYC/NYPD/BADGE.png" height="300"><br>New York City Police Department</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="NYC/Sheriff"> --><img src="NYC/Sheriff/BADGE.png" height="300"><br>New York City Sheriff's Office</a><br><br>
 		</div>
 		 
-		<div class="columng">
-			<!-- <a href="NYC/DEP"> --><img src="NYC/DEP/BADGE.png" height="300"><br>New York City<br>Department of Environmental Protection</a><br>
+		<div class="column">
+			<!-- <a href="NYC/DEP"> --><img src="NYC/More/Environment.png" height="300"><br>New York City<br>Department of Environmental Protection</a><br>
 		</div>
 		 
-		<div class="columng">
-			<!-- <a href="NYC/DHS"> --><img src="NYC/DHS/BADGE.png" height="300"><br>New York City<br>Department of Homeless Services</a><br>
+		<div class="column">
+			<!-- <a href="NYC/DHS"> --><img src="NYC/More/Homeless.png" height="300"><br>New York City<br>Department of Homeless Services</a><br>
 		</div>
 		 
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="NYC/FDNY"> --><img src="NYC/FDNY/BADGE.png" height="300"><br>Fire Department of the City of New York</a><br><br>
 		</div>
 		
-		<div class="columng">
+		<div class="column">
 			<!-- <a href="../../Transit/Transit/MTA"> --><img src="../../Transit/Transit/MTA/BADGE.png" height="300"><br>New York Metropolitan</br>Transportation Authority</a><br><br>
 		</div>
+		
+		<div class="column">
+			<img src="NYC/More/Race/Shmira/Shmira.png" height="300"><br>Shmira Public Safety Patrols<br>
+				<div class="column4">
+					<img src="NYC/More/Race/Shmira/ShmiraC.png" height="150"><br>City Wide<br>
+				</div>
+				<div class="column4">
+					<img src="NYC/More/Race/Shmira/ShmiraQB.png" height="150"><br>Queens Borough<br>
+				</div>
+				<div class="column4">
+					<img src="NYC/More/Race/Shmira/ShmiraCH.png" height="150"><br>Crown Heights<br>
+				</div>
+				<div class="column4">
+					<img src="NYC/More/Race/Shmira/ShmiraSI.png" height="150"><br>Staten Island<br>
+				</div>
+		</div>		
+		<div class="column">
+			<img src="NYC/More/Race/Shmira/ShomrimCH.png" height="300"><br>Shomrim Crown Heights<br>
+		</div>
+		<div class="column">
+			<img src="NYC/More/Race/MCP.png" height="300"><br>Muslim Community Patrol<br>
+		</div>
+		
+		
 	</div>
 
 </body>
